# sway-gnome

./: .PKGINFO  .gitignore  PKGBUILD  README.md
config/: env  meson.build
config/sway/: 10-service.conf  gnome
sway/config.d/: gnome
systemd/: meson.build  sway-session-pre.target  sway-session.target  sway.service  swaybg.service  swayidle.service  wayland-session-pre.target  wayland-session.target
wayland-sessions/: sway-user-service.desktop
