services = [
  'gnome-keyring.service',
  'polkit-gnome.service',
  'kanshi.service',
  'swaybg.service',
  'swayidle.service',
  'sway-session-pre.target',
  'sway-session.target',
  'sway.service',
  'wayland-session-pre.target',
  'wayland-session.target'
]

install_data(services, install_dir: 'lib/systemd/user')
